[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/ui/menu/core/panel/GameSubMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/images/buttons/controller/XboxOne_A.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/font_sub_title.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/fonts/font_title.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/images/buttons/controller/XboxOne_LB.png" type="Texture" id=5]
[ext_resource path="res://assets/images/buttons/controller/XboxOne_RB.png" type="Texture" id=6]
[ext_resource path="res://assets/images/buttons/controller/XboxOne_Dpad.png" type="Texture" id=7]
[ext_resource path="res://assets/images/ui/Youtube.svg" type="Texture" id=8]
[ext_resource path="res://assets/images/ui/Environment.svg" type="Texture" id=9]
[ext_resource path="res://scenes/ui/menu/menus/MenuCredits.gd" type="Script" id=10]
[ext_resource path="res://assets/images/buttons/controller/XboxOne_B.png" type="Texture" id=11]

[node name="Credits" instance=ExtResource( 1 )]
script = ExtResource( 10 )
sub_menu_name = "credits_panel"

[node name="SubMenuTitle" parent="Title/Control" index="0"]
text = "credits_panel"

[node name="Control" parent="Title/Back/HBoxContainer" index="0"]
margin_right = 39.0

[node name="TextureRect" parent="Title/Back/HBoxContainer" index="1"]
margin_left = 43.0
margin_right = 75.0

[node name="Label" parent="Title/Back/HBoxContainer" index="2"]
margin_left = 79.0
margin_right = 156.0
text = "button_back"

[node name="Control2" parent="Title/Back/HBoxContainer" index="3"]
margin_left = 160.0

[node name="Content" type="MarginContainer" parent="." index="2"]
margin_top = 44.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 10
custom_constants/margin_left = 20
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Content" index="0"]
margin_left = 20.0
margin_top = 10.0
margin_right = 1004.0
margin_bottom = 546.0

[node name="ScrollContainer" type="ScrollContainer" parent="Content/VBoxContainer" index="0"]
margin_right = 984.0
margin_bottom = 536.0
size_flags_vertical = 3
follow_focus = true

[node name="VBoxContainer" type="MarginContainer" parent="Content/VBoxContainer/ScrollContainer" index="0"]
margin_right = 984.0
margin_bottom = 472.0
size_flags_horizontal = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Content/VBoxContainer/ScrollContainer/VBoxContainer" index="0"]
margin_top = 10.0
margin_right = 974.0
margin_bottom = 462.0
size_flags_vertical = 3
custom_constants/separation = 30

[node name="Xelu" type="VBoxContainer" parent="Content/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer" index="0"]
margin_right = 974.0
margin_bottom = 260.0
custom_constants/separation = 20

[node name="Header" type="GridContainer" parent="Content/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer/Xelu" index="0"]
margin_right = 974.0
margin_bottom = 34.0
custom_constants/hseparation = 10
columns = 2

[node name="Title" type="Label" parent="Content/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer/Xelu/Header" index="0"]
margin_right = 276.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 4 )
text = "credit_xelu_pack_title"
valign = 2

[node name="License" type="Label" parent="Content/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer/Xelu/Header" index="1"]
margin_left = 286.0
margin_right = 519.0
margin_bottom = 34.0
size_flags_vertical = 5
custom_colors/font_color = Color( 0.388235, 0.568627, 0.607843, 1 )
custom_fonts/font = ExtResource( 3 )
text = "credit_xelu_pack_license"
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Content/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer/Xelu" index="1"]
margin_top = 54.0
margin_right = 974.0
margin_bottom = 154.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect0" type="TextureRect" parent="Content/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer/Xelu/HBoxContainer" index="0"]
margin_left = 45.0
margin_right = 145.0
margin_bottom = 100.0
size_flags_horizontal = 6
texture = ExtResource( 5 )
stretch_mode = 5

[node name="TextureRect1" type="TextureRect" parent="Content/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer/Xelu/HBoxContainer" index="1"]
margin_left = 241.0
margin_right = 341.0
margin_bottom = 100.0
size_flags_horizontal = 6
texture = ExtResource( 2 )
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="Content/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer/Xelu/HBoxContainer" index="2"]
margin_left = 436.0
margin_right = 536.0
margin_bottom = 100.0
size_flags_horizontal = 6
texture = ExtResource( 7 )
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="Content/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer/Xelu/HBoxContainer" index="3"]
margin_left = 632.0
margin_right = 732.0
margin_bottom = 100.0
size_flags_horizontal = 6
texture = ExtResource( 11 )
stretch_mode = 5

[node name="TextureRect4" type="TextureRect" parent="Content/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer/Xelu/HBoxContainer" index="4"]
margin_left = 828.0
margin_right = 928.0
margin_bottom = 100.0
size_flags_horizontal = 6
texture = ExtResource( 6 )
stretch_mode = 5

[node name="Description" type="Label" parent="Content/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer/Xelu" index="2"]
margin_top = 174.0
margin_right = 974.0
margin_bottom = 188.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "credit_xelu_pack_description"
autowrap = true

[node name="Links" type="VBoxContainer" parent="Content/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer/Xelu" index="3"]
margin_top = 208.0
margin_right = 974.0
margin_bottom = 260.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Download" type="ToolButton" parent="Content/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer/Xelu/Links" index="0" groups=["credits-input"]]
margin_right = 974.0
margin_bottom = 24.0
focus_neighbour_left = NodePath("/root/EditorNode/@@592/@@593/@@601/@@603/@@607/@@611/@@612/@@613/@@629/@@630/@@639/@@640/@@6275/@@6109/@@6110/@@6111/@@6112/@@6113/Credits/Content/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer/Xelu/Links/Download")
focus_neighbour_top = NodePath("/root/EditorNode/@@592/@@593/@@601/@@603/@@607/@@611/@@612/@@613/@@629/@@630/@@639/@@640/@@6275/@@6109/@@6110/@@6111/@@6112/@@6113/Credits/Content/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer/Font/FontDL")
focus_neighbour_right = NodePath("/root/EditorNode/@@592/@@593/@@601/@@603/@@607/@@611/@@612/@@613/@@629/@@630/@@639/@@640/@@6275/@@6109/@@6110/@@6111/@@6112/@@6113/Credits/Content/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer/Xelu/Links/Download")
focus_neighbour_bottom = NodePath("/root/EditorNode/@@592/@@593/@@601/@@603/@@607/@@611/@@612/@@613/@@629/@@630/@@639/@@640/@@6275/@@6109/@@6110/@@6111/@@6112/@@6113/Credits/Content/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer/Xelu/Links/Youtube")
mouse_default_cursor_shape = 2
text = "download_xelu_pack"
icon = ExtResource( 9 )
align = 0

[node name="Youtube" type="ToolButton" parent="Content/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer/Xelu/Links" index="1" groups=["credits-input"]]
margin_top = 28.0
margin_right = 974.0
margin_bottom = 52.0
focus_neighbour_left = NodePath("/root/EditorNode/@@592/@@593/@@601/@@603/@@607/@@611/@@612/@@613/@@629/@@630/@@639/@@640/@@6275/@@6109/@@6110/@@6111/@@6112/@@6113/Credits/Content/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer/Xelu/Links/Youtube")
focus_neighbour_top = NodePath("/root/EditorNode/@@592/@@593/@@601/@@603/@@607/@@611/@@612/@@613/@@629/@@630/@@639/@@640/@@6275/@@6109/@@6110/@@6111/@@6112/@@6113/Credits/Content/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer/Xelu/Links/Download")
focus_neighbour_right = NodePath("/root/EditorNode/@@592/@@593/@@601/@@603/@@607/@@611/@@612/@@613/@@629/@@630/@@639/@@640/@@6275/@@6109/@@6110/@@6111/@@6112/@@6113/Credits/Content/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer/Xelu/Links/Youtube")
focus_neighbour_bottom = NodePath("/root/EditorNode/@@592/@@593/@@601/@@603/@@607/@@611/@@612/@@613/@@629/@@630/@@639/@@640/@@6275/@@6109/@@6110/@@6111/@@6112/@@6113/Credits/Content/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer/Font/FontDL")
mouse_default_cursor_shape = 2
text = "youtube_xelu"
icon = ExtResource( 8 )
align = 0

[node name="Font" type="VBoxContainer" parent="Content/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer" index="1"]
margin_top = 290.0
margin_right = 974.0
margin_bottom = 370.0

[node name="Header" type="GridContainer" parent="Content/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer/Font" index="0"]
margin_right = 974.0
margin_bottom = 34.0
custom_constants/hseparation = 10
columns = 2

[node name="Title" type="Label" parent="Content/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer/Font/Header" index="0"]
margin_right = 205.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 4 )
text = "credit_font_title"
valign = 2

[node name="License" type="Label" parent="Content/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer/Font/Header" index="1"]
margin_left = 215.0
margin_right = 393.0
margin_bottom = 34.0
size_flags_vertical = 5
custom_colors/font_color = Color( 0.388235, 0.568627, 0.607843, 1 )
custom_fonts/font = ExtResource( 3 )
text = "credit_font_license"
valign = 1

[node name="Description" type="Label" parent="Content/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer/Font" index="1"]
margin_top = 38.0
margin_right = 974.0
margin_bottom = 52.0
text = "credit_font_description"

[node name="FontDL" type="ToolButton" parent="Content/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer/Font" index="2" groups=["credits-input"]]
margin_top = 56.0
margin_right = 974.0
margin_bottom = 80.0
focus_neighbour_left = NodePath("/root/EditorNode/@@592/@@593/@@601/@@603/@@607/@@611/@@612/@@613/@@629/@@630/@@639/@@640/@@6275/@@6109/@@6110/@@6111/@@6112/@@6113/Credits/Content/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer/Font/FontDL")
focus_neighbour_top = NodePath("/root/EditorNode/@@592/@@593/@@601/@@603/@@607/@@611/@@612/@@613/@@629/@@630/@@639/@@640/@@6275/@@6109/@@6110/@@6111/@@6112/@@6113/Credits/Content/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer/Xelu/Links/Youtube")
focus_neighbour_right = NodePath("/root/EditorNode/@@592/@@593/@@601/@@603/@@607/@@611/@@612/@@613/@@629/@@630/@@639/@@640/@@6275/@@6109/@@6110/@@6111/@@6112/@@6113/Credits/Content/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer/Font/FontDL")
focus_neighbour_bottom = NodePath("/root/EditorNode/@@592/@@593/@@601/@@603/@@607/@@611/@@612/@@613/@@629/@@630/@@639/@@640/@@6275/@@6109/@@6110/@@6111/@@6112/@@6113/Credits/Content/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer/Xelu/Links/Download")
mouse_default_cursor_shape = 2
text = "download_font"
icon = ExtResource( 9 )
align = 0

[node name="Other" type="VBoxContainer" parent="Content/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer" index="2"]
margin_top = 400.0
margin_right = 974.0
margin_bottom = 452.0

[node name="Header" type="GridContainer" parent="Content/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer/Other" index="0"]
margin_right = 974.0
margin_bottom = 34.0
custom_constants/hseparation = 10
columns = 2

[node name="Title" type="Label" parent="Content/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer/Other/Header" index="0"]
margin_right = 306.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 4 )
text = "credit_other_assets_title"
valign = 2

[node name="License" type="Label" parent="Content/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer/Other/Header" index="1"]
margin_left = 316.0
margin_right = 570.0
margin_bottom = 34.0
size_flags_vertical = 5
custom_colors/font_color = Color( 0.388235, 0.568627, 0.607843, 1 )
custom_fonts/font = ExtResource( 3 )
text = "credit_other_assets_license"
valign = 1

[node name="Description" type="Label" parent="Content/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer/Other" index="1"]
margin_top = 38.0
margin_right = 974.0
margin_bottom = 52.0
text = "credit_other_assets_description"

[node name="Tween" type="Tween" parent="Content/VBoxContainer/ScrollContainer" index="1"]

[connection signal="item_rect_changed" from="Content" to="." method="_on_Content_item_rect_changed"]
[connection signal="pressed" from="Content/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer/Xelu/Links/Download" to="." method="_on_Download_xelu_pack_pressed"]
[connection signal="pressed" from="Content/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer/Xelu/Links/Youtube" to="." method="_on_Youtube_xelu_chanel_pressed"]
[connection signal="pressed" from="Content/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer/Font/FontDL" to="." method="_on_FontDL_pressed"]
